# rust-skia-engine

./: .gitignore  .repomixignore  AGENTS.md  API.md  Cargo.toml  DOCS_INDEX.md  INTEGRATION_FAILURE.md  PLAN.md  README.md  SCRIPTING.md  floatify.py  review_visuals  setup_assets.sh  temp.json  temp_mobilo.json  temp_u4j.json  verify_vfx.rhai
.agent/rules/: AGENTS.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  v1_release_task.md
.github/workflows/: ci.yml  visual_regression.yml
.grits/: focus  issues.jsonl  topology.json
crates/director-cli/: Cargo.toml  README.md
crates/director-cli/src/: main.rs
crates/director-core/: Cargo.toml  README.md
crates/director-core/docs/: ANIMATION.md  ARCHITECTURE.md  CREATING_NODES.md  ELEMENT_TRAIT.md  README.md  SCENE_GRAPH.md  SYSTEMS.md
crates/director-core/examples/: ultimate_showcase.rhai
crates/director-core/src/: animation.rs  audio.rs  director.rs  element.rs  errors.rs  layout.rs  lib.rs  render.rs  scene.rs  scripting.rs  tokens.rs  types.rs  video_wrapper.rs
crates/director-core/src/export/: mod.rs  video.rs
crates/director-core/src/node/: box_node.rs  composition.rs  effect.rs  image_node.rs  lottie.rs  mod.rs  text.rs  text_animator.rs  vector.rs  video_node.rs
crates/director-core/src/scripting/: mod.rs  theme.rs  types.rs  utils.rs
crates/director-core/src/scripting/api/: animation.rs  audio.rs  effects.rs  lifecycle.rs  mod.rs  nodes.rs  properties.rs
crates/director-core/src/systems/: assets.rs  layout.rs  mod.rs  renderer.rs  transitions.rs
crates/director-core/tests/: api_showcase.rs  audio.rs  audio_resampling_test.rs  composition.rs  examples.rs  layout.rs  lottie_test.rhai  masking.rs  perf_test.rs  rfc_010.rs  shader_uv.rhai  test_api_showcase.rs  test_cinematic_showcase.rs  test_gpu.rs  test_kitchen_sink.rs  test_masking.rs  test_sync_video.rs  test_text_animators.rs  test_theme.rhai  test_theme.rs  test_transforms.rs  test_transitions.rs  test_typography.rs  transforms.rs  transitions.rs  typography.rs  video.rs  video_sync_test.rs  visual_regression.rs  visual_suite.rs
crates/director-core/tests/fixtures/: lottie_simple.json
crates/director-core/tests/snapshots/: layout_structure.txt
crates/director-core/tests/visual/: elements.rs  layout.rs  mod.rs
crates/director-pipeline/: Cargo.toml  README.md
crates/director-pipeline/src/: lib.rs
crates/director-schema/: Cargo.toml  README.md
crates/director-schema/src/: lib.rs
crates/director-tts/: Cargo.toml
crates/director-tts/docs/: ADDING_PROVIDER.md
crates/director-tts/src/: lib.rs
crates/director-tts/src/providers/: elevenlabs.rs  gemini.rs  mod.rs  openai.rs
crates/lottie-core/: Cargo.toml
crates/lottie-core/benches/: animator_bench.rs
crates/lottie-core/src/: animatable.rs  expressions.rs  lib.rs  modifiers.rs  renderer.rs
crates/lottie-core/tests/: spatial_bezier.rs  test_dash.rs
crates/lottie-data/: Cargo.toml
crates/lottie-data/src/: lib.rs  model.rs
crates/lottie-data/tests/: integration_parsing.rs
crates/lottie-skia/: Cargo.toml
crates/lottie-skia/src/: lib.rs
crates/lottie-skia/tests/: compositing.rs  context_test.rs  render_test.rs
director/: Cargo.toml  README.md
director/src/: director.rs  lib.rs  main.rs  scripting.rs  video_wrapper.rs
docs/: API.md  BUILD_GUIDE.md  CONTRIBUTING.md  DIRECTOR_V_REMOTION.md  FEATURE_MATRIX.md  GAP_REPORT.md  README.md  RHAI_API_SPEC.md  ROADMAP.md  V1_RELEASE_CHECKLIST.md  V2_RELEASE_CHECKLIST.md
docs/architecture/: overview.md
docs/contributing/: development.md  documentation.md
docs/future/: TEMPLATE_STRATEGY.md
docs/issues/: 001-visual-regression-expansion.md  002-structured-logging.md  003-ci-integration.md  004-benchmark-suite.md  README.md
docs/specs/: SAM3_SPEC.md  _TEMPLATE.md
docs/user/: getting-started.md
examples/: README.md  cinematic_showcase.rhai  kitchen_sink.rs  test_text_center.rhai  test_z_index.rhai  ultimate_mashup.rhai  ultimate_showcase.rhai  vector_example.rhai  vfx_showcase.rhai
examples/basics/: animation.rhai  hello_world.rhai  layout_flexbox.rhai  text.rhai
examples/features/: cinematic_shaders.rhai  effects.rhai  grid_bento.rhai  image.rhai  kinetic_text.rhai  masking.rhai  transitions.rhai
src/: animation.rs  audio.rs  director.rs  element.rs  layout.rs  lib.rs  lottie.rs  main.rs  node.rs  render.rs  scripting.rs  shaders.rs  video_wrapper.rs
src/node/: lottie.rs  mod.rs  shape.rs  vector.rs
tests/: kitchen_sink.rhai  perf_test.rs  rfc_017.rhai  test_kitchen_sink.rs  test_lottie.rs  test_text_animators.rs  test_typography.rs
