[package]
name = "director-engine"
version = "1.1.0"
edition = "2021"
description = "A high-performance 2D rendering engine using Skia and Taffy"
license = "MIT"
repository = "https://github.com/babybirdprd/rust-skia-engine"
keywords = ["graphics", "skia", "rendering", "video"]
categories = ["rendering", "multimedia::video"]

[dependencies]
skia-safe = "0.90.0"
taffy = "0.9.2"
keyframe = "1.1.1"
cosmic-text = "0.15.0"
rhai = "1.23.6"
anyhow = "1.0.100"
thiserror = "2.0.17"
image = "0.25.9"
symphonia = { version = "0.5.3", features = ["aac", "mp3", "pcm", "wav", "isomp4"] }

# Optional dependencies
video-rs = { version = "0.10.5", optional = true, features = ["ndarray"] }
ndarray = "0.16"
rayon = "1.10"
tempfile = "3.23.0"
crossbeam-channel = "0.5.15"
unicode-segmentation = "1.10"
rand = "0.8"
resvg = "0.44"
usvg = "0.44"
tiny-skia = "0.11"

[features]
default = ["video-rs"]
mock_video = []
vulkan = ["skia-safe/vulkan"]

[[bin]]
name = "director-engine"
path = "src/main.rs"

[package.metadata.docs.rs]
no-default-features = true
features = ["mock_video"]
