[package]
name = "director"
version = "0.1.0"
edition = "2021"

[dependencies]
skia-safe = "0.90.0"
taffy = "0.9.2"
keyframe = "1.1.1"
cosmic-text = "0.15.0"
rhai = "1.23.6"
anyhow = "1.0.100"
thiserror = "2.0.17"
image = "0.25.9"

# Optional dependencies
video-rs = { version = "0.10.5", optional = true }
ndarray = "0.17.1"

[features]
default = ["video-rs"]
mock_video = []

[[bin]]
name = "main"
path = "src/main.rs"
