[package]
name = "lottie-core"
version.workspace = true
edition.workspace = true

[dependencies]
lottie-data.workspace = true
serde.workspace = true
serde_json.workspace = true
glam.workspace = true
kurbo.workspace = true
thiserror.workspace = true
base64 = "0.22.1"
boa_engine = { version = "0.19", optional = true }
boa_gc = { version = "0.19", optional = true }

[features]
expressions = ["dep:boa_engine", "dep:boa_gc"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "animator_bench"
harness = false
