[package]
name = "lottie-skia"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Skia renderer for Lottie animations"

[dependencies]
lottie-core.workspace = true
skia-safe.workspace = true
glam.workspace = true
kurbo.workspace = true

[dev-dependencies]
lottie-data = { path = "../lottie-data" }
serde_json = "1.0"
